--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@ body {
 }
 
 header {
-    background-color: #333;
-    color: white;
+    background-color: white;
+    color: black;
     text-align: center;
     padding: 1em;
 }
