added light/dark mode

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,25 @@
-body {
-    font-family: Arial, sans-serif;
-}
-
-header {
+/* Default light mode styles */
+body[data-theme="light"],
+body:not([data-theme]) {
     background-color: white;
     color: black;
-    text-align: center;
-    padding: 1em;
+}
+
+header[data-theme="light"],
+header:not([data-theme]) {
+    background-color: white;
+    color: black;
+}
+
+/* Dark mode styles */
+body[data-theme="dark"] {
+    background-color: black;
+    color: white;
+}
+
+header[data-theme="dark"] {
+    background-color: black;
+    color: white;
 }
 
 #skills {
@@ -27,7 +40,7 @@ header {
     display: inline-block;
     margin: 0.5em;
     padding: 0.5em 1em;
-    border: 1px solid #ccc;
+    border: 1px solid green;
     border-radius: 5px;
 }
 
