--- a/styles.css
+++ b/styles.css
@@ -74,3 +74,51 @@ body[data-theme="light"] .skill-box {
 .contact-button:hover {
     background-color: #0056b3;
 }
+
+/* Navigation Bar */
+#top-nav {
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: inherit;
+    padding: 10px;
+    z-index: 1;
+}
+
+#themeToggle {
+    float: right;
+    margin-left: 10px;
+}
+
+.nav-button {
+    float: right;
+    margin-left: 10px;
+    padding: 5px 10px;
+    text-decoration: none;
+    border: 1px solid transparent;
+    border-radius: 3px;
+}
+
+.nav-button:hover {
+    border-color: #ccc;
+}
+
+#themeToggle {
+    float: right;
+    margin-left: 10px;
+    width: 30px;
+    height: 15px;
+    border-radius: 50%;  /* Make it a circle */
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    outline: none;
+}
+
+#themeToggle:focus {
+    outline: none;
+}
+
+#themeIcon {
+    font-size: 1.5em;
+}
