--- a/styles.css
+++ b/styles.css
@@ -419,6 +419,29 @@ body[data-theme="dark"] .nav-button {
     background-color: rgba(0, 0, 0, 0.5); 
 }
 
+.modal-content label,
+.modal-content input,
+.modal-content textarea {
+    display: block;         
+    width: 95%;
+    position: center;      
+    margin: 10px 0;         
+    padding: 10px;          
+}
+
+.modal-content input[type="submit"] {
+    cursor: pointer;       
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    transition: background-color 0.3s ease; 
+}
+
+.modal-content input[type="submit"]:hover {
+    background-color: #0056b3;  
+}
+
 .modal-content {
     background-color: black;
     margin: 15% auto; 
